# FoPTransApp_Final

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  setup.sh  vcpkg-lol.json
include/files/: LocPackBinFile.h  LocPackFile.h
include/utils/: DataSerializer.h  GitHubManager.h  LocaleLine.h
src/: main.cpp
src/files/: LocPackBinFile.cpp  LocPackFile.cpp
src/utils/: DataSerializer.cpp  GitHubManager.cpp  LocaleLine.cpp
